--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,4 @@
-version: '3.8'
-
 services:
-  backend:
-    build: .
-    ports:
-      - "5000:5000"
-    environment:
-      - DB_HOST=database
-      - DB_USER=root
-      - DB_PASSWORD=rootpassword
-      - DB_NAME=helloworld
-    depends_on:
-      - database
-      - keycloak
-
   database:
     image: mysql:5.7
     environment:
@@ -51,8 +36,21 @@ services:
 
 
   configure-keycloak:
-    build: ./configure-keycloak
+    build: ./keycloak
     depends_on:
+      - keycloak
+
+  backend:
+    build: ./app
+    ports:
+      - "5000:5000"
+    environment:
+      - DB_HOST=database
+      - DB_USER=root
+      - DB_PASSWORD=rootpassword
+      - DB_NAME=helloworld
+    depends_on:
+      - database
       - keycloak
 
 
