fix docker-compose + add initial CD for the backend

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,5 +6,12 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 COPY . .
+COPY wait-for-it.sh /wait-for-it.sh
 
-CMD ["python", "app.py"]
+# Install netcat-openbsd
+RUN apt-get update && apt-get install -y netcat-openbsd
+
+# Make the script executable
+RUN chmod +x /wait-for-it.sh
+
+CMD ["/wait-for-it.sh", "database", "3306", "--", "python", "app.py"]
