--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          docker buildx build --push --tag my-dockerhub-username/my-backend:latest .
+          docker buildx build --push --tag my-dockerhub-username/my-backend:latest ./app
           docker buildx build --push --tag my-dockerhub-username/configure-keycloak:latest ./keycloak
         working-directory: .
 
