--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Authenticate to GKE
         run: |
+          gcloud auth activate-service-account --key-file=${{ secrets.GCP_SA_KEY }}
           gcloud config set project ${{ secrets.GCP_PROJECT }}
           gcloud config set compute/zone ${{ secrets.GKE_ZONE }}
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }}
