--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and push Docker images
-        run: |
-          docker buildx build --push --tag ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./app
-          docker buildx build --push --tag ${{ secrets.DOCKER_USERNAME }}/configure-keycloak:latest ./keycloak
-        working-directory: .
+#      - name: Build and push Docker images
+#        run: |
+#          docker buildx build --push --tag ${{ secrets.DOCKER_USERNAME }}/my-backend:latest ./app
+#          docker buildx build --push --tag ${{ secrets.DOCKER_USERNAME }}/configure-keycloak:latest ./keycloak
+#        working-directory: .
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
@@ -59,24 +59,32 @@ jobs:
         with:
           version: 'latest'
 
-      - name: verify connection
+      - name: Verify connection
         run: kubectl get nodes
+
+      - name: Create prod namespace
+        run: |
+          kubectl create namespace prod || echo "Namespace prod already exists"
+
+      - name: Create dev namespace
+        run: |
+          kubectl create namespace dev || echo "Namespace dev already exists"
 
       - name: Create Secrets for Development
         if: github.ref == 'refs/heads/dev'
         run: |
-          kubectl create secret generic backend-secret --from-literal=DB_USER=${{ secrets.DB_USER_DEV }} --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD_DEV }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic keycloak-db-secret --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic keycloak-secret --from-literal=KEYCLOAK_ADMIN=${{ secrets.KEYCLOAK_ADMIN }} --from-literal=KEYCLOAK_ADMIN_PASSWORD=${{ secrets.KEYCLOAK_ADMIN_PASSWORD }} --from-literal=DB_USER=${{ secrets.POSTGRES_USER }} --from-literal=DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic mysql-secret --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD_DEV }} --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret generic backend-secret --from-literal=DB_USER=${{ secrets.DB_USER_DEV }} --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD_DEV }} --dry-run=client -o yaml | kubectl apply -f - -n dev
+          kubectl create secret generic keycloak-db-secret --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f - -n dev
+          kubectl create secret generic keycloak-secret --from-literal=KEYCLOAK_ADMIN=${{ secrets.KEYCLOAK_ADMIN }} --from-literal=KEYCLOAK_ADMIN_PASSWORD=${{ secrets.KEYCLOAK_ADMIN_PASSWORD }} --from-literal=DB_USER=${{ secrets.POSTGRES_USER }} --from-literal=DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f - -n dev
+          kubectl create secret generic mysql-secret --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD_DEV }} --dry-run=client -o yaml | kubectl apply -f - -n dev
 
       - name: Create Secrets for Production
         if: github.ref == 'refs/heads/main'
         run: |
-          kubectl create secret generic backend-secret --from-literal=DB_USER=${{ secrets.DB_USER_PROD }} --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD_PROD }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic keycloak-db-secret --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic keycloak-secret --from-literal=KEYCLOAK_ADMIN=${{ secrets.KEYCLOAK_ADMIN }} --from-literal=KEYCLOAK_ADMIN_PASSWORD=${{ secrets.KEYCLOAK_ADMIN_PASSWORD }} --from-literal=DB_USER=${{ secrets.POSTGRES_USER }} --from-literal=DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic mysql-secret --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD_PROD }} --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret generic backend-secret --from-literal=DB_USER=${{ secrets.DB_USER_PROD }} --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD_PROD }} --dry-run=client -o yaml | kubectl apply -f - -n prod
+          kubectl create secret generic keycloak-db-secret --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f - -n prod
+          kubectl create secret generic keycloak-secret --from-literal=KEYCLOAK_ADMIN=${{ secrets.KEYCLOAK_ADMIN }} --from-literal=KEYCLOAK_ADMIN_PASSWORD=${{ secrets.KEYCLOAK_ADMIN_PASSWORD }} --from-literal=DB_USER=${{ secrets.POSTGRES_USER }} --from-literal=DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} --dry-run=client -o yaml | kubectl apply -f - -n prod
+          kubectl create secret generic mysql-secret --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD_PROD }} --dry-run=client -o yaml | kubectl apply -f - -n prod
 
       - name: Deploy to Development
         if: github.ref == 'refs/heads/dev'
