--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -2,8 +2,10 @@ resources:
   - backend-deployment.yaml
   - backend-service.yaml
   - keycloak-db-deployment.yaml
+  - keycloak-db-service.yaml
   - keycloak-deployment.yaml
   - keycloak-service.yaml
   - mysql-deployment.yaml
+  - mysql-service.yaml
   - pvc.yaml
   - configure-keycloak-deployment.yaml
