--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  database:
+  mysql:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
@@ -51,7 +51,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - DB_HOST=database
+      - DB_HOST=mysql
       - DB_USER=root
       - DB_PASSWORD=rootpassword
       - DB_NAME=helloworld
