--- a/k8s/base/backend-deployment.yaml
+++ b/k8s/base/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ${BACKEND_IMAGE_TAG}
+        image: ahmedbest/backend-service:latest
         ports:
         - containerPort: 5000
         envFrom:
