--- a/k8s/base/keycloak-db-deployment.yaml
+++ b/k8s/base/keycloak-db-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       initContainers:
       - name: init-postgresql
         image: busybox
-        command: ['sh', '-c', 'rm -rf /var/lib/postgresql/data/*']
+        command: ['sh', '-c', 'rm -rf /var/lib/postgresql/data/pgdata/*; mkdir -p /var/lib/postgresql/data/pgdata']
         volumeMounts:
         - name: postgres-persistent-storage
           mountPath: /var/lib/postgresql/data
@@ -32,6 +32,7 @@ spec:
         volumeMounts:
         - name: postgres-persistent-storage
           mountPath: /var/lib/postgresql/data
+          subPath: pgdata
       volumes:
       - name: postgres-persistent-storage
         persistentVolumeClaim:
